# logger

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  EXTRACTION.md  IMPROVEMENTS.md  README.md  logger.cc  logger.h
examples/: demo.cc
test/: test.cc
